// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button All 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt QQPef dtVUxq"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm sc-eCssSg jqYRjY dtVUxq cbGuuR"
  >
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  flRtIg"
    >
      Primary
    </span>
    <button
      className="sc-gsTCUz fgyMuL"
    >
      Click
    </button>
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  flRtIg"
    >
      Outline
    </span>
    <button
      className="sc-gsTCUz cqUrwy"
    >
      Click
    </button>
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  flRtIg"
    >
      Success
    </span>
    <button
      className="sc-gsTCUz eVQZuV"
    >
      Click
    </button>
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  flRtIg"
    >
      Warning
    </span>
    <button
      className="sc-gsTCUz ekkonk"
    >
      Click
    </button>
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  flRtIg"
    >
      Error
    </span>
    <button
      className="sc-gsTCUz kgMwgX"
    >
      Click
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Layout/Container Container 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt QQPef dtVUxq"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm sc-hKgILt gyNwPp dtVUxq"
    height="100vh"
  >
    This is the content of a container component
  </div>
</div>
`;

exports[`Storyshots Atoms/Layout/Grid Grid 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt QQPef dtVUxq"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm sc-eCssSg  dtVUxq jhIYme"
  >
    <div
      className="sc-bdfBwQ sc-dlfnbm sc-eCssSg  dtVUxq ehdhyK"
    >
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
    </div>
    <div
      className="sc-bdfBwQ sc-dlfnbm sc-eCssSg  dtVUxq lllEAR"
    >
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
    </div>
    <div
      className="sc-bdfBwQ sc-dlfnbm sc-eCssSg  dtVUxq cEGeNL"
    >
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm OppVF dtVUxq"
        height={150}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Typography/Heading Heading 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt QQPef dtVUxq"
>
  <h1
    className="sc-bdfBwQ sc-jSgupP sc-gKsewC gYDVUp jJYlhf kWykmG"
    color="text.primary"
  >
    Mountain UI library
  </h1>
</div>
`;

exports[`Storyshots Atoms/Typography/Paragraph Paragraph 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt QQPef dtVUxq"
>
  <p
    className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ sc-fubCfw  jJYlhf"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
  </p>
</div>
`;

exports[`Storyshots Atoms/Typography/Text Text 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt QQPef dtVUxq"
>
  <span
    className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  jJYlhf"
  >
    Mountain UI library
  </span>
</div>
`;
